# esp32-ma-bell-gateway

./: .buildinfo  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  WIFI_SETUP.md  design.html  genindex.html  historical-perspective.html  idf_component.yml  implementation.html  index.html  introduction.html  look  objects.inv  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  search.html  searchindex.js  solution-design.html  standards.html  state.html  tones.html  usage.html
.doctrees/: environment.pickle  index.doctree  standards.doctree
_sources/: design.rst.txt  historical-perspective.rst.txt  index.rst.txt  introduction.rst.txt  solution-design.rst.txt  standards.rst.txt  state.rst.txt  tones.rst.txt  usage.rst.txt
_static/: custom.css
bell-system-blueprint/: borscht.html  dialing.html  index.html  power.html  signaling-tones.html  voice.html
circuit-design-decisions/: index.html  off-hook-detection.html
design/: index.html
docs/: Makefile  requirements.txt
impl/: low-voltage-test-rig.md  prototyping-build-guide.md
implementation/: bom.html  historical-perspective.html  index.html
ma-bell-docs/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  standards.html  state.html  tones.html  usage.html
main/: CMakeLists.txt  Kconfig.projbuild  main.c  tones.c  tones.h  web.c  web.h  wifi.c  wifi.h
main/app/: ma_bell.c  ma_bell.h  pin_assignments.c  pin_assignments.h  tones.c  tones.h
main/app/bluetooth/: app_hf_msg_set.c  app_hf_msg_set.h
main/app/events/: event_system.c  event_system.h
main/app/state/: ma_bell_state.c  ma_bell_state.h
main/app/web/: web_interface.c  web_interface.h
main/audio/: audio_bridge.c  audio_bridge.h  audio_output.c  audio_output.h  tones.c  tones.h
main/bluetooth/: bt_app_core.c  bt_app_hf.c  bt_app_hf.h  bt_connection_manager.c  bt_connection_manager.h  bt_init.c  bt_init.h
main/config/: audio_config.h  bluetooth_config.h  pin_assignments.h  system_config.h  web_config.h  wifi_config.h
main/hardware/: gpio_pcm_config.c  hardware_init.c  hardware_init.h  phone_hardware.c  phone_hardware.h  slic_interface.c  slic_interface.h
main/network/: CMakeLists.txt  wifi.c  wifi.h
main/network/mqtt/: mqtt.c  mqtt.h
main/network/web/: web_interface.c  web_interface.h
main/network/wifi/: wifi.c  wifi.h  wifi_init.c  wifi_init.h
main/storage/: CMakeLists.txt  storage.c  storage.h
(+162 files in other folders)
